--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>VALOPACK</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Open packs and fight to get all the Valorant agents!">
     <link rel="shortcut icon" href="#" />
-    <title>VALOPACK: Loading</title>
   </head>
   <body>
     <div id="root"></div>
